--- a/PufferExample/PufferExample/Base.lproj/Main.storyboard
+++ b/PufferExample/PufferExample/Base.lproj/Main.storyboard
@@ -26,9 +26,21 @@
                                     <constraint firstAttribute="height" constant="200" id="nfe-vJ-sJ9"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fir-vD-AdP">
+                                <rect key="frame" x="137.5" y="453.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="3ff-Nt-Tgt"/>
+                                    <constraint firstAttribute="height" constant="30" id="Rgz-PL-oi7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="fir-vD-AdP" firstAttribute="top" secondItem="gsK-M6-tUI" secondAttribute="bottom" constant="20" id="Dah-PA-lKf"/>
+                            <constraint firstItem="fir-vD-AdP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SAq-0M-ClY"/>
                             <constraint firstItem="gsK-M6-tUI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WjM-9d-b2f"/>
                             <constraint firstItem="gsK-M6-tUI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="toE-ay-aFI"/>
                         </constraints>
@@ -66,6 +78,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="dial" destination="gsK-M6-tUI" id="4aa-ew-wPh"/>
+                        <outlet property="roateAngleValue" destination="fir-vD-AdP" id="UpD-OJ-Qdc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
