--- a/PufferExample/PufferExample/Base.lproj/Main.storyboard
+++ b/PufferExample/PufferExample/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                 <action selector="rotateLimit:" destination="BYZ-38-t0r" id="mPh-tN-BSB"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem title="Show 60°" id="Yaj-GW-fyV">
+                        <barButtonItem title="Partial show" id="Yaj-GW-fyV">
                             <connections>
                                 <action selector="showLimit:" destination="BYZ-38-t0r" id="uxX-4p-b7W"/>
                             </connections>
@@ -91,7 +91,7 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="Voy-qM-EdV">
-                        <barButtonItem key="leftBarButtonItem" title="Change orientation with show 60° limit" id="btw-Nu-v8c">
+                        <barButtonItem key="leftBarButtonItem" title="Changing orientation with partial show" id="btw-Nu-v8c">
                             <connections>
                                 <action selector="changeOrientation:" destination="BYZ-38-t0r" id="QjE-qI-rkX"/>
                             </connections>
